[package]
name = "urcu"
description = "safe wrapper of the memb variant of the userspace RCU library"
version = "0.0.3"
edition = "2018"
links = "urcu-memb"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "LGPL-2.1-or-later"
repository = "https://github.com/adamreichold/urcu"
keywords = ["rcu", "lock-free", "reclamation", "garbage"]
categories = ["concurrency", "memory-management"]

[dev-dependencies]
crossbeam-utils = "0.8"
static_assertions = "1.1"
